--- a/css/team.css
+++ b/css/team.css
@@ -12,6 +12,78 @@ body {
     font-size: 3rem;
 } */
 
+
+@media screen and (max-width: 1000px){
+    .carousel-item h2{
+        font-size: 10px;
+    }
+}
+.main-slide{
+    background-color: #C9D439;
+}
+
+.carousel-item{
+    top: 25%;
+}
+.carousel-item a{
+    
+    text-decoration: none;
+}
+.carousel-item h2{
+    font-size: 200px;
+    color: #fff;
+}
+.carousel-inner{
+    
+    height: 600px;
+    /* background-position: center; */
+    width: 100%;
+    background-repeat: no-repeat;
+      background-size: 100% 100%; 
+    /* background-image: url(../images/team-bg.png); */
+}
+/**********************vision***************************/
+
+
+.box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgb(63, 163, 180);
+    margin: 20px 0;
+    padding: 10px;
+    width: 100%;
+    min-height: 300px;
+    border: 2px #000 solid;
+    color: #fff;
+  }
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+  .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+    background: rgb(121, 180, 190);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    box-shadow: 2px 2px 2px #000;
+  }
+
+.vision-text, .mission-text{
+    padding: 3%;
+}
+
+/**************************************team*********************************/
 .heading {
     margin: 0 0 20px 0;
     text-transform: none;
@@ -53,8 +125,8 @@ body {
 }
 
 .team-member figure img {
-    height: 350px;
-    min-width: 100%;
+    height: 250px;
+    min-width: 60%;
 }
 
 .team-member figcaption p {
@@ -110,7 +182,7 @@ body {
 .team-member figure:hover figcaption {
     visibility: visible;
     color: #fff;
-    background: rgba(230, 78, 62, 0.9);
+    background: rgb(144, 214, 231);
     /* Primary color, can be changed via colors.css */
     
     height: 100%;
@@ -147,13 +219,5 @@ body {
     -o-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
-
-/*Advisory*/
-.advisory{
-    margin: 4%;
-    width: 50%;
-}
-
-
 /*footer*/
 
