--- a/css/new.css
+++ b/css/new.css
@@ -78,8 +78,9 @@ h4,h4{
 .modalContent {padding: 0 2em;}
 
 .headerBar {
+  color: white;
   width: 100%;
-  background: #edcb04 ;
+  background: #05480c ;
   margin: 0;
   text-align: center;
   padding: 0.5em;
@@ -200,7 +201,7 @@ h4,h4{
 .media{
   text-align:center;
   margin-top: 5px;
-  /* font-family: 'Cormorant Garamond', serif;  */
+  font-family: 'EB Garamond', serif;
   font-weight:700; 
   font-size: 40px; 
   color:green;
@@ -344,10 +345,15 @@ h4,h4{
 
 /**********************************************footer**********************************/
 /*footer*/
-footer .container{
+/* footer .container{
   overflow: hidden;
   
+} */
+
+.contact-us{
+  padding: 20px;
 }
+
 ul {
   margin: 0px;
   padding: 0px;
@@ -367,12 +373,6 @@ ul {
 .img-fluid-1{
   position: relative;
   width: 100px;
-  height: 80px;
-}
-
-.img-fluid-2{
-  position: relative;
-  width: 100px;
   border-radius: 50%;
 }
 
@@ -382,29 +382,9 @@ ul {
   float: left;
 }
 
-.footer-widget-heading{
-  text-shadow: 2px 2px;
+.links, .follow{
+  color: #05480c;
 }
-/* .links h3{
-  margin-bottom: 40px;
-  position: relative;
-}
-
-.links h3::before{
-  position: absolute;
-  left: 0;
-  bottom: -15px;
-  height: 2px;
-  width: 50px;
-  content: "";
-  background:  #1c6812;
-}
-
-.footer-widget-heading h3 {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-} */
 
 .footer-widget ul li {
   display: inline-block;
@@ -421,51 +401,16 @@ ul {
 
 .footer-social-icon {
   color: rgb(255, 255, 255);
-  /* width: 430px; */
   display: block;
-  /* font-size: 20px; */
-  font-family: 'Poppins', sans-serif;
   margin-bottom: 10px;
 }
 .footer-social-icon a {
   margin-right: 15px;
 }
 
-/* .follow h3{
-  margin-bottom: 40px;
-  position: relative;
-}
-
-.follow h3::before{
-    position: absolute;
-    right: 18.5rem;
-    bottom: -15px;
-    height: 2px;
-    width: 50px;
-    content: "";
-    background:  #1c6812;
-  } */
   
-
-.instagram-bg{
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-  -webkit-background-clip: text;
-  /* Also define standard property for compatibility */
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  /* line-height: 40px; */
-  font-size: 45px; /* change this to change the size*/
-}
 .linkedin-bg{
-  color: #fff;
-  font-size: 45px;
-  height: 45px;
-  width: 50px;
-  text-align: center;
-  /* line-height: 40px; */
-  border-radius: 20%;
-  background: #0e76a8;
-  /* padding-bottom: 2px; */
+  margin-left: 10px;
 }
 
 .subscribe{
@@ -474,6 +419,79 @@ ul {
 }
 
 
+*,
+*::before,
+*::after {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+a#instagram {
+  float: left;
+	margin: 0px;
+	position: relative;
+	display: block;
+	width:  47px;
+	height: 47px;
+	outline: none;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;
+	background: -webkit-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -webkit-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
+	background: -moz-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -moz-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
+	background: -ms-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -ms-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
+	background: -o-radial-gradient(32% 106%, circle cover, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), -o-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
+	background: radial-gradient(circle farthest-corner at 32% 106%, rgb(255, 225, 125) 0%, rgb(255, 205, 105) 10%, rgb(250, 145, 55) 28%, rgb(235, 65, 65) 42%, transparent 82%), linear-gradient(135deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
+}
+
+a#instagram i#logo {
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	position: absolute;
+	display: block;
+	width: 35px;
+	height: 35px;
+	border: 4px solid rgb(255, 255, 255);
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+
+a#instagram i#logo::before {
+	content: "";
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	position: absolute;
+	display: block;
+	width: 20px;
+	height: 20px;
+	border: 4px solid rgb(255, 255, 255);
+	-webkit-border-radius: 27px;
+	-moz-border-radius: 27px;
+	border-radius: 27px;
+}
+
+a#instagram i#logo::after {
+	content: "";
+	top: 2px;
+	right: 2px;
+	position: absolute;
+	display: block;
+	width: 4px;
+	height: 4px;
+	background: rgb(255, 255, 255);
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
 /*copyright area*/
 .copyright-area{
   background: #202020;
